--- a/index.html
+++ b/index.html
@@ -1,417 +1,40 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja de Momentos Especiais</title>
-    <style>
-        /* Estilos Gerais */
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #ffe4e9, #fffaf0);
-            color: #555;
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
-        }
-
-        /* Cabeçalho */
-        header {
-            background-color: #ff6f91;
-            color: white;
-            text-align: center;
-            padding: 30px;
-            border-bottom: 5px solid #ff3b6c;
-            animation: fadeInDown 1s;
-        }
-
-        /* Banner de Promoção */
-        .promo-banner {
-            background-color: #ffcce0;
-            color: #ff3366;
-            text-align: center;
-            padding: 12px;
-            margin-bottom: 30px;
-            font-size: 1.2em;
-            border-radius: 10px;
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        /* Animações */
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        @keyframes fadeInDown {
-            from {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes popUp {
-            0% { transform: scale(0.8); }
-            100% { transform: scale(1); }
-        }
-
-        /* Seção de Planos */
-        main {
-            padding: 0 20px;
-            animation: fadeIn 1.5s;
-        }
-
-        .plans {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 25px;
-        }
-
-        .plan {
-            background-color: white;
-            border-radius: 15px;
-            text-align: center;
-            padding: 25px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            animation: popUp 0.8s;
-        }
-
-        .plan:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2);
-        }
-
-        .plan h2 {
-            background-color: #ff6f91;
-            color: white;
-            padding: 15px;
-            margin: -25px -25px 15px;
-            border-radius: 15px 15px 0 0;
-        }
-
-        .plan .items {
-            color: #777;
-            font-size: 0.9em;
-            margin-bottom: 15px;
-        }
-
-        .plan .price {
-            color: #ff3b6c;
-            font-size: 1.5em;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        .plan select {
-            margin-top: 10px;
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 1em;
-        }
-
-        button {
-            background-color: #ff6f91;
-            color: white;
-            padding: 12px;
-            border: none;
-            cursor: pointer;
-            border-radius: 8px;
-            font-size: 1.1em;
-            transition: background-color 0.3s;
-            margin-top: 10px;
-        }
-
-        button:hover {
-            background-color: #ff3b6c;
-        }
-
-        /* Carrinho */
-        #cart {
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            background-color: #ff6f91;
-            color: white;
-            padding: 15px;
-            border-radius: 10px;
-            cursor: pointer;
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
-            display: none;
-        }
-
-        #cart.show {
-            display: block;
-        }
-
-        #cart-details {
-            position: fixed;
-            top: 0;
-            right: 0;
-            background-color: #fff;
-            width: 320px;
-            height: 100%;
-            padding: 25px;
-            box-shadow: -4px 0 15px rgba(0, 0, 0, 0.1);
-            overflow-y: auto;
-            display: none;
-            border-radius: 10px 0 0 10px;
-        }
-
-        #cart-details.show {
-            display: block;
-        }
-
-        #cart-details .close {
-            position: absolute;
-            top: 15px;
-            right: 15px;
-            background: none;
-            border: none;
-            font-size: 1.5em;
-            color: #ff3b6c;
-            cursor: pointer;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #ff6f91;
-            color: white;
-            margin-top: 20px;
-        }
-    </style>
+    <title>JP STORE</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Loja de Momentos Especiais</h1>
+    <header class="header">
+        <div class="container">
+            <h1>JP STORE</h1>
+            <nav class="nav">
+                <input type="text" id="search-bar" placeholder="Buscar produtos..." onkeyup="searchProducts()">
+                <button class="cart-btn" onclick="toggleCart()">🛒 Carrinho (<span id="cart-count">0</span>)</button>
+            </nav>
+        </div>
     </header>
 
-    <div class="promo-banner">
-        <span>💖 Promoção especial! Desconto de 50% em TODOS os planos! 💖</span>
-    </div>
-
-    <main>
-        <section class="plans">
-            <article class="plan">
-                <h2>Aconchego</h2>
-                <p class="items">Abraços, Mensagens de Bom Dia, Carinho Virtual</p>
-                <select id="plan1">
-                    <option value="4">1 Dia - R$1</option>
-                    <option value="4">1 Semana - R$2</option>
-                    <option value="4">1 Mês - R$6</option>
-                </select>
-                <button onclick="addToCart('Aconchego', getPrice('plan1'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Declarações Diárias</h2>
-                <p class="items">Declaração Personalizada</p>
-                <select id="plan2">
-                    <option value="4">1 Dia - R$1</option>
-                    <option value="4">1 Semana - R$2</option>
-                    <option value="4">1 Mês - R$6</option>
-                </select>
-                <button onclick="addToCart('Declarações Diárias', getPrice('plan2'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Pacote de Amor Completo</h2>
-                <p class="items">Abraços Virtuais, Beijos, Chamadas Noturnas, Surpresas Românticas</p>
-                <select id="plan3">
-                    <option value="4">1 Dia - R$1</option>
-                    <option value="4">1 Semana - R$2</option>
-                    <option value="4">1 Mês - R$6</option>
-                </select>
-                <button onclick="addToCart('Pacote de Amor Completo', getPrice('plan3'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Jantar Virtual Romântico</h2>
-                <p class="items">Escolha um prato, jantar juntos por chamada de vídeo</p>
-                <select id="plan4">
-                    <option value="4">1 Jantar - R$1</option>
-                </select>
-                <button onclick="addToCart('Jantar Virtual Romântico', getPrice('plan4'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Noite de Filmes a Distância</h2>
-                <p class="items">Assistir juntos ao mesmo filme, comentando no chat ou chamada</p>
-                <select id="plan5">
-                    <option value="4">1 Filme - R$1</option>
-                </select>
-                <button onclick="addToCart('Noite de Filmes a Distância', getPrice('plan5'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Surpresa Personalizada</h2>
-                <p class="items">Criação de um presente digital (vídeo, carta, etc.) personalizado</p>
-                <select id="plan6">
-                    <option value="4">1 Surpresa - R$1</option>
-                </select>
-                <button onclick="addToCart('Surpresa Personalizada', getPrice('plan6'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Playlist Especial</h2>
-                <p class="items">Criação de uma playlist personalizada com músicas para momentos a dois</p>
-                <select id="plan7">
-                    <option value="4">1 Playlist - R$1</option>
-                </select>
-                <button onclick="addToCart('Playlist Especial', getPrice('plan7'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Mensagens de Áudio</h2>
-                <p class="items">Áudios fofos ou divertidos para alegrar o dia</p>
-                <select id="plan8">
-                    <option value="4">5 Áudios - R$1</option>
-                    <option value="4">15 Áudios - R$2</option>
-                </select>
-                <button onclick="addToCart('Mensagens de Áudio', getPrice('plan8'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Fotos Exclusivas</h2>
-                <p class="items">Envio de fotos exclusivas e personalizadas</p>
-                <select id="plan9">
-                    <option value="4">5 Fotos - R$1</option>
-                    <option value="4">15 Fotos - R$2</option>
-                </select>
-                <button onclick="addToCart('Fotos Exclusivas', getPrice('plan9'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Cartas Digitais</h2>
-                <p class="items">Cartas escritas com mensagens personalizadas</p>
-                <select id="plan10">
-                    <option value="4">1 Carta - R$1</option>
-                    <option value="4">3 Cartas - R$2</option>
-                </select>
-                <button onclick="addToCart('Cartas Digitais', getPrice('plan10'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Carinho Virtual Ilimitado</h2>
-                <p class="items">Sessões de carinho virtual durante o dia</p>
-                <select id="plan11">
-                    <option value="4">1 Semana - R$2</option>
-                    <option value="4">1 Mês - R$6</option>
-                </select>
-                <button onclick="addToCart('Carinho Virtual Ilimitado', getPrice('plan11'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Vídeos Aleatórios</h2>
-                <p class="items">Vídeos fofos ou divertidos enviados de surpresa</p>
-                <select id="plan12">
-                    <option value="4">3 Vídeos - R$1</option>
-                    <option value="4">10 Vídeos - R$2</option>
-                </select>
-                <button onclick="addToCart('Vídeos Aleatórios', getPrice('plan12'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Resolução de Brigas</h2>
-                <p class="items">Sessões para conversar e resolver desentendimentos</p>
-                <select id="plan13">
-                    <option value="4">1 Sessão - R$1</option>
-                </select>
-                <button onclick="addToCart('Resolução de Brigas', getPrice('plan13'))">Adicionar</button>
-            </article>
-
-            <article class="plan">
-                <h2>Ligação de Vídeo Especial</h2>
-                <p class="items">Uma chamada de vídeo para se conectar melhor</p>
-                <select id="plan14">
-                    <option value="4">30 Minutos - R$1</option>
-                    <option value="4">1 Hora - R$2</option>
-                </select>
-                <button onclick="addToCart('Ligação de Vídeo Especial', getPrice('plan14'))">Adicionar</button>
-            </article>
+    <main class="container">
+        <section id="products" class="products">
+            <!-- Produtos serão carregados dinamicamente -->
         </section>
     </main>
-</body>
-
-         
-
-
-           
-    </main>
-
-    <div id="cart" onclick="showCart()">
-        Ver Carrinho
-    </div>
 
     <div id="cart-details">
-        <button class="close" onclick="closeCart()">×</button>
-        <h3>Carrinho de Compras</h3>
+        <button class="close" onclick="toggleCart()">×</button>
+        <h3>Seu Carrinho</h3>
         <div id="cart-items"></div>
-        <p class="total">Total: R$<span id="total-price">0</span></p>
-        <button onclick="checkout()">Finalizar Compra</button>
+        <p class="total">Total: R$<span id="total-price">0.00</span></p>
+        <button onclick="checkout()" class="btn-primary">Finalizar Compra</button>
     </div>
 
-    <footer>
-        <p>💌 Torne cada momento único, mesmo à distância! 💌</p>
+    <footer class="footer">
+        <p>&copy; 2025 JP STORE - Todos os direitos reservados.</p>
     </footer>
 
-    <script>
-        let cart = [];
-        let total = 0;
-
-        function getPrice(planId) {
-            const select = document.getElementById(planId);
-            return parseFloat(select.value);
-        }
-
-        function addToCart(planName, price) {
-            cart.push({ name: planName, price: price });
-            total += price;
-            updateCart();
-        }
-
-        function updateCart() {
-            const cartItems = document.getElementById('cart-items');
-            const totalPrice = document.getElementById('total-price');
-            cartItems.innerHTML = '';
-            cart.forEach(item => {
-                const itemElement = document.createElement('div');
-                itemElement.innerHTML = <p>${item.name} - R$${item.price.toFixed(2)}</p>;
-                cartItems.appendChild(itemElement);
-            });
-            totalPrice.innerText = total.toFixed(2);
-            document.getElementById('cart').classList.add('show');
-        }
-
-        function showCart() {
-            document.getElementById('cart-details').classList.add('show');
-        }
-
-        function closeCart() {
-            document.getElementById('cart-details').classList.remove('show');
-        }
-
-        function checkout() {
-            let message = 'Resumo do Pedido:\n';
-            cart.forEach(item => {
-                message += ${item.name} - R$${item.price.toFixed(2)}\n;
-            });
-            message += Total: R$${total.toFixed(2)};
-
-            const whatsappLink = https://api.whatsapp.com/send?phone=24981128510&text=${encodeURIComponent(message)};
-            window.open(whatsappLink, '_blank');
-
-            cart = [];
-            total = 0;
-            updateCart();
-            closeCart();
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
